fix:Resolved the issue where the dropdown box shadow was not visible

--- a/src/components/common/DropDownList/DropDownList.module.scss
+++ b/src/components/common/DropDownList/DropDownList.module.scss
@@ -3,7 +3,6 @@
   top: 4.8rem;
   right: 0;
   width: 12rem;
-  overflow: hidden;
   transition: max-height 0.5s ease-in-out;
 
   &.close {
